# redir_svc

./: .gitignore  README.md
.github/workflows/: CICD.yml  ci.yml  deploy-prod.yml  deploy-test.yml
backend/: .dockerignore  .env.example  Docke 312 rfile  Dockerfile  com 312 pose.yml  compose.dev.yml  compose.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.tets.yml  docker-compose.yml  pyproject.toml  start_dev.sh
backend/src/: main.py
backend/src/cache/: redis.py
backend/src/core/: base_repo.py  dependencies.py  exception.py  exception_handler.py  logger.py  middleware.py  models.py  security.py  settings.py
backend/src/db/: base.py  session.py
backend/src/db/models/: redir.py  user.py
backend/src/managers/: count_sync.py
backend/src/modules/: dependencies.py
backend/src/modules/auth/: repository.py  routers.py  schemas.py  service.py  shemas.py
backend/src/modules/redir/: repository.py  routers.py  schemas.py  service.py  utils.py
backend/tests/: conftest.py  testing_file.py
backend/tests/test_api/: test_auth.py  test_redir.py
backend/tests/test_unit/: test_auth_repository.py  test_auth_schemas.py  test_auth_service.py  test_redir_repository.py  test_redir_schemas.py  test_redir_service.py  test_redir_utils.py  test_security.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  axios.ts  redir.ts
frontend/src/components/: AddRedirect.tsx  Header.tsx  ProtectedRoute.tsx  RedirectCard.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
infra/: docker-compose.yml
infra/nginx/: Dockerfile  nginx.conf
